# computo-quarto-extension

./: .gitignore  .nojekyll  .quartoignore  CHANGELOG.md  DESCRIPTION  README.md  _Rprofile  _environment  _quarto-ci.yml  _quarto.yml  computo-quarto-extension.html  computo-quarto-extension.qmd  environment.yml  index.html  postrender.R  prerender.R  published-paper-tsne.qmd  pyproject.toml  references.bib  setup-env-ci.sh  setup-render-ci.sh  start.R  template-R.qmd  template.qmd
.github/workflows/: build.yml  publish.yml  release.yml
37cef4d1/: .nojekyll
96adc38a/: .nojekyll
_extensions/computo/: _dependencies.R  _extension.yml  canonical.lua  code-block-all.lua  code-block-all.scss  custom.scss  environment.yml  not-in-format.lua  pdf-table-fit.lua  pseudocode.lua  pseudocode.min.js  shortcodes.lua  status.lua  strip-legacy-plotly-mathjax.lua
_extensions/computo/_extensions/computorg/pseudocode/: pseudocode.lua
_extensions/computo/includes/: pseudocode-footer.html  pseudocode-header.html
_extensions/computo/partials/html/: google-scholar-metadata.html  mathjax-ams.html  status-alert.html  title-block.html  title-metadata.html
_extensions/computo/partials/pdf/: before-body.tex  include-in-header.tex
cfd61d58/: .nojekyll
computo-quarto-extension_files/figure-html/: tikz-ex-1.dvi
computo-quarto-extension_files/libs/bootstrap/: bootstrap-f11e999d7f1636233620f09fa30e7671.min.css  bootstrap.min.css
filters/: list-table.lua
renv/: .gitignore
template_files/libs/bootstrap/: bootstrap.min.css
(+2 files in other folders)
